test_regress/t/t_implements_nested_bad.out
%Error-UNSUPPORTED: t/t_implements_nested_bad.v:8:14: Unsupported: class within class
    8 |    interface class bad_cannot_nest;
      |              ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
